kubernetes/eks/argocd/overlays/stg/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: cp-k8s-stg
    alb.ingress.kubernetes.io/group.name: cp
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:374146079343:certificate/660c426f-0c58-4745-8e4d-79c491c45b73
spec:
  ingressClassName: alb
  rules:
    - host: argocd.stg.ngsw-app.click
      http:
        paths:
          - path:
            pathType: ImplementationSpecific
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
